# ClothPBD

./: .gitignore  .gitmodules  281dbb2c49407b89.wasm  431f1a7ed1cd9eeb.ts  43bd0f0c02e498c6.wasm  6588aca695b6c31a.ts  81ebdc1a28fe681f.wasm  bundle.5400296047e57d17.js  bundle.5400296047e57d17.js.map  bundle.57921b40746ff4d5.js  bundle.57921b40746ff4d5.js.map  bundle.8797ce7c8ef51a74.js  bundle.8797ce7c8ef51a74.js.map  bundle.c954650e70bb81f4.js  bundle.c954650e70bb81f4.js.map  bundle.e9d667c02eabb161.js  bundle.e9d667c02eabb161.js.map  bundle.f32f8825aa01d927.js  bundle.f32f8825aa01d927.js.map  ee25f76186fb0b2b.ts  index.html  main.css  package.json  readme.md
.github/workflows/: webpack.yml
bundler/: webpack.common.js
src/: PBD.js  PBD.wasm  index.html  index.ts
static/: PBD.js  PBD.wasm
wasm/: CMakeLists.txt  Readme.md  build.py  build.sh  cloth.h  cloth_simulator.cpp  cloth_simulator.h  cloth_simulator.idl  cloth_simulator_wrapper.cpp  eigen_test.cpp  eigen_test.h  glue.cpp  glue.js  implicit_solver.h  jacobi_solver.h  mass_spings.h  sim_base.h  wasm.cpp  wasm.h  wasm.idl  wasm_wrapper.cpp
